--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developer Portfolio | 3D Interactive Experience</title>
+    <title>Ali Raza Portfolio | 3D Interactive Experience</title>
     <meta name="description" content="An interactive 3D developer portfolio showcasing web development skills, projects, and expertise with modern animations and UI design." />
     <meta name="author" content="DEV" />
-
-    <meta property="og:title" content="Developer Portfolio | 3D Interactive Experience" />
+    <link rel="icon" type="image/png" href="/public/ali-faicon.jpg" />
+    <meta property="og:title" content="Ali Raza | 3D Interactive Experience" />
     <meta property="og:description" content="An interactive 3D developer portfolio showcasing web development skills, projects, and expertise with modern animations and UI design." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@aliraza" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JPS340C7W"></script>
     <script>
