update portfolio: update form and other things etc

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ali Raza Portfolio | 3D Interactive Experience</title>
+    <title>Muhammad Ali Raza</title>
     <meta name="description" content="An interactive 3D developer portfolio showcasing web development skills, projects, and expertise with modern animations and UI design." />
     <meta name="author" content="DEV" />
     <link rel="icon" type="image/png" href="/public/ali-faicon.jpg" />
